example-service-nodejs/kube-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
spec:
  selector:
    app: example-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
