example-service-nodejs/kube-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
  name: example-service

spec:
  rules:
    - host:
      http:
        paths:
          - path: /example-service*
            backend:
              serviceName: example-service
              servicePort: 80
